<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/register_student" />
        <item
            android:id="@+id/nav_staff"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/register_staff" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/poster" />
    </group>
</menu>
