<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chrisdev.newsroom.activity.ui.admin.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_admin">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.chrisdev.newsroom.activity.ui.admin.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_student"
        android:name="com.chrisdev.newsroom.activity.ui.admin.student.RegisterStudentFragment"
        android:label="@string/menu_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_staff"
        android:name="com.chrisdev.newsroom.activity.ui.admin.staff.RegisterStaffFragment"
        android:label="@string/menu_staff"
        tools:layout="@layout/fragment_staff" />
    <fragment
        android:id="@+id/nav_post"
        android:name="com.chrisdev.newsroom.activity.ui.admin.poster.PosterFragment"
        android:label="@string/menu_poster"
        tools:layout="@layout/fragment_post" />
</navigation>