<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/divider_horizontal_bright"
    tools:context=".Login">

    <EditText
        android:id="@+id/et_regno"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="48dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:ems="10"
        android:hint="Roll Number/ Email"
        android:inputType="textPersonName"
        android:shadowColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_pass"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_regno"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_btn"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="442dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="241dp"
        android:background="@android:drawable/checkbox_off_background"
        android:gravity="center"
        android:lineSpacingExtra="12sp"
        android:onClick="@string/bottom_sheet_behavior"
        android:text="@string/login"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="LOGIN" />

    <TextView
        android:id="@+id/textViewLink"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:gravity="center"
        android:linksClickable="false"
        android:text="@string/messageWithLink"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sign In" />

</androidx.constraintlayout.widget.ConstraintLayout>